--- a/data-analyst.html
+++ b/data-analyst.html
@@ -113,7 +113,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHO9Vfwj&k=Job&j=oODG9fw0&__jvst=Employee&__jvsd=sFo77gw2&__jvsc=Twitter&bid=nCqZSKw8'>Schneider Electric NAM Careers - Data Services Data Analyst</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHO9Vfwj&k=Job&j=oODG9fw0&__jvst=Employee&__jvsd=sFo77gw2&__jvsc=Twitter&bid=nCqZSKw8'>Schneider Electric NAM Careers - Data Services Data Analyst</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-24</p>
 <hr/>
@@ -145,7 +145,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Jul 17, 2019 ... Apply online for the job of Graduate Data Analyst (Canberra) at Aginic.</p>
 <hr/>
-<h5><a href='https://sybo-games.workable.com/jobs/1076318'>Game Data Analyst - Apply online - SYBO Games - Jobs</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://sybo-games.workable.com/jobs/1076318'>Game Data Analyst - Apply online - SYBO Games - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 15, 2019 ... Apply online for the job of Game Data Analyst at SYBO Games.</p>
 <hr/>
@@ -168,11 +168,11 @@ Stuart.</p>
 <p><span class="badge badge-light">Los Angeles California</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/tileapp/65ad5af9-c330-4a41-8446-8ab69485db46'>Tile - Sales and Channel Marketing Data Analyst</a></h5> 
+<h5><a href='https://jobs.lever.co/tileapp/65ad5af9-c330-4a41-8446-8ab69485db46'>Tile - Sales and Channel Marketing Data Analyst</a></h5> 
 <p><span class="badge badge-light">San Mateo, CA</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://comtravo.join.com/jobs/251277-data-bi-analyst-f-m-x'>Job @ Comtravo (Berlin): Data / BI Analyst (f/m/x) | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://comtravo.join.com/jobs/251277-data-bi-analyst-f-m-x'>Job @ Comtravo (Berlin): Data / BI Analyst (f/m/x) | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
@@ -185,7 +185,7 @@ Stuart.</p>
 <p>Jul 14, 2019 ... Data Analyst. Mumbai, Maharashtra. 3. Ad Sales ? Sales. Full time. Submit your 
 application. LinkedIn profile. Loading. Apply with Linkedin. Profile added.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/hylinkgroup/4817c76d-1504-4119-ba61-d2b52b1c8c4a/apply'>Hylink Digital Solutions - Quantitative Data Analyst</a></h5> 
+<h5><a href='https://jobs.lever.co/hylinkgroup/4817c76d-1504-4119-ba61-d2b52b1c8c4a/apply'>Hylink Digital Solutions - Quantitative Data Analyst</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 14, 2019 ... Quantitative Data Analyst. New York. Hylink - New York City ? Finance. Full-time. 
 Submit your application. Resume/CV ?. ATTACH RESUME/CV. Couldn't?...</p>
@@ -221,7 +221,7 @@ from Ironclad Technology Services would breach or violate any non-compete?...</p
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://aginic.workable.com/j/89D81AA017'>Aginic - Jobs: Data Analyst (Sydney) - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://aginic.workable.com/j/89D81AA017'>Aginic - Jobs: Data Analyst (Sydney) - Apply online</a></h5> 
 <p><span class="badge badge-light">Sydney Sydney Sydney Sydney</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -301,7 +301,7 @@ Ellaktor.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/INNOVIEW/743999692162776-business-and-data-analyst'>Innoview Business and Data Analyst | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/INNOVIEW/743999692162776-business-and-data-analyst'>Innoview Business and Data Analyst | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Budapest</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
